# jorja-clipper

./: .gitignore  AGENTS.md  BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TECH_DEBT_REVIEW.md  TEST_COVERAGE.md  package-lock.json  package.json  pyproject.toml  setup-ffmpeg.sh  vite.config.ts
.github/workflows/: ci.yml  release.yml
assets/icons/: icon.icns
assets/linux/: jorja-clipper.desktop
docs/: FFMPEG_SIDECAR.md
docs/plans/: 2026-05-23-jorja-clipper-plan.md
docs/superpowers/plans/: 2026-05-26-rust-tauri-port.md  2026-05-28-macos-video-embedding.md  2026-05-29-bug-fixes.md
docs/superpowers/specs/: 2026-05-26-rust-tauri-port-design.md  2026-05-28-macos-video-embedding-design.md
packaging/: common.py  linux.spec  linux.spec.new  macos.spec  runtime_hook_mpv.py  windows.spec
scripts/: download_ffmpeg.py
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/tao/src/platform_impl/macos/: app_delegate.rs  app_state.rs
src-tauri/src/: cleanup.rs  clipper.rs  commands.rs  controller.rs  converter.rs  error.rs  lib.rs  main.rs  ns_view.rs  player.rs  settings.rs  storage.rs  util.rs  video_server.rs  x11_window.rs
src-tauri/tests/: integration_tests.rs
src/jorja_clipper/: __init__.py  __main__.py  app.py  batch_queue.py  clip_store.py  clipper.py  controller.py  main.py  player.py  plugins.py  settings.py  worker.py
src/jorja_clipper/gui/: __init__.py  clip_list.py  main_window.py  settings_dialog.py  theme.py  video_widget.py
src/lib/: api.ts  types.ts
src/lib/components/: Controls.svelte  SettingsDialog.svelte  VideoPlayer.svelte
src/lib/stores/: player.ts
src/routes/: +page.svelte
tests/: conftest.py  test_batch_queue.py  test_clip_store.py  test_clipper.py  test_controller.py  test_controller_persistence.py  test_gui.py  test_integration.py  test_main_window.py  test_player.py  test_plugins.py  test_pydantic_settings_spike.py  test_settings.py  test_theme.py  test_worker.py
