[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jorja-clipper"
dynamic = ["version"]
description = "Cross-platform desktop app for instant sports highlight extraction."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Turing"},
]
keywords = [
    "video", "clip", "highlight", "sports", "ffmpeg", "mpv",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PySide6>=6.11,<6.12",
    "python-mpv>=1.0.7,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-qt>=4.2,<5.0",
    "ruff>=0.1.0,<1.0",
    "hypothesis>=6.0,<7.0",
    "pydantic>=2.0,<3.0",
]
packaging = [
    "pyinstaller>=6.0,<7.0",
]

[project.urls]
Homepage = "https://github.com/cortexuvula/jorja-clipper"
Repository = "https://github.com/cortexuvula/jorja-clipper"
Issues = "https://github.com/cortexuvula/jorja-clipper/issues"

[project.scripts]
jorja-clipper = "jorja_clipper.app:main"

[tool.hatch.version]
path = "src/jorja_clipper/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jorja_clipper"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D102", "D104", "D107", "D203", "D212", "N802"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-v"
