[package]
name = "jorja-clipper"
version = "0.1.0"
description = "Cross-platform desktop app for instant sports highlight extraction"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.1"
raw-window-handle = "0.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
