[package]
name = "jorja-clipper"
version = "0.5.2"
description = "Cross-platform desktop app for instant sports highlight extraction"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "unstable", "devtools"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.7.1"
raw-window-handle = "0.6"
tiny_http = "0.12"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["allow-unsafe-code"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSWindow", "NSColor", "NSResponder"] }
objc2-foundation = { version = "0.2", features = ["NSGeometry", "NSString"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
